tests/sawn/fixtures/valid/23_anonymous_root_table.sawn
// Test: Anonymous root table (JSON root = array of objects)
[][] name,age,active
  "Alice",30,true
  "Bob",25,false
  "Carol",null,true
