tests/sawn/fixtures/invalid/18_empty_cell_consecutive_commas.sawn
// INVALID: Consecutive commas in table row (empty cells not allowed)
users[][] name,age,score
  "Alice",,95
